# ap2_delay_repo

./: .gitignore  CMakeLists.txt
prototypes/: IIR_Delay.asv  IIR_Delay.m  basicFBDelay.asv  basicFBDelay.m  circularBuffer.asv  circularBuffer.m  feedbackDelayFuncTest.m  feedbackDelayTest.m  multitapDelay1.m  secstosamplesconverter.m
source/: cids.h  circularBuffer.cpp  circularBuffer.h  controller.cpp  controller.h  delayLine.cpp  delayLine.h  entry.cpp  processor.cpp  processor.h  version.h
